feat(verify account): send email to verify account
